[package]
name = "visualization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools-num = "0.1.3"
plotly = { version = "0.8.3", features = ["kaleido"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.16.0"